--- a/src/App.less
+++ b/src/App.less
@@ -1,3 +1,10 @@
 @import "antd/dist/antd.less";
 
+@font-family: "Poppins", sans-serif;
 @primary-color: #4070ff;
+@avatar-border-radius: 12px;
+
+.ant-input-affix-wrapper {
+  border-radius: 32px !important;
+  padding: 12px 26px !important;
+}
