--- a/src/components/Navbar/styles.module.css
+++ b/src/components/Navbar/styles.module.css
@@ -1,7 +1,14 @@
+.flex-center {
+  display: flex;
+  align-items: center;
+}
 .container {
-  padding: 40px;
+  padding: 16px 32px;
+  justify-content: space-between;
+  gap: 12px;
+  box-shadow: 0px 6px 13px 0px rgba(0, 0, 0, 0.06);
 }
 .title-header {
-  font-size: 32px;
-  font-weight: bold;
+  font-size: 24px;
+  font-weight: 600;
 }
