--- a/src/App.less
+++ b/src/App.less
@@ -1,9 +1,17 @@
 @import "antd/dist/antd.less";
 
+// custome antd theme for global
 @font-family: "Poppins", sans-serif;
 @primary-color: #4070ff;
 @avatar-border-radius: 12px;
 
+// global style
+.flex-center {
+  display: flex;
+  align-items: center;
+}
+
+// custom antd style for global
 .ant-input-affix-wrapper {
   border-radius: 32px !important;
   padding: 12px 26px !important;
