--- a/src/App.less
+++ b/src/App.less
@@ -4,6 +4,7 @@
 @font-family: "Poppins", sans-serif;
 @primary-color: #4070ff;
 @avatar-border-radius: 12px;
+@tag-border-radius: 16px;
 
 // global style
 .flex-center {
@@ -15,4 +16,9 @@
 .ant-input-affix-wrapper {
   border-radius: 32px !important;
   padding: 12px 26px !important;
+}
+.ant-tag {
+  padding: 3px 16px;
+  font-weight: 500;
+  border: none;
 }
