--- a/src/App.less
+++ b/src/App.less
@@ -7,6 +7,8 @@
 @border-radius-base: 32px;
 @input-padding-vertical-base: 8px;
 @input-padding-horizontal: 26px;
+@input-bg: #f5f5f5;
+@input-border-color: none;
 
 // global style
 .flex-center {
