--- a/src/components/CarDetail/styles.module.css
+++ b/src/components/CarDetail/styles.module.css
@@ -1,11 +1,7 @@
-.container {
-  padding: 24px;
-  background-color: white;
-  border-radius: 12px;
-  display: flex;
-  gap: 24px;
-}
 .title-menu {
   font-weight: 600;
   padding-right: 24px;
+}
+.table > tr > td {
+  padding-bottom: 12px;
 }
