--- a/src/App.less
+++ b/src/App.less
@@ -9,6 +9,7 @@
 @input-padding-horizontal: 26px;
 @input-bg: #f5f5f5;
 @input-border-color: none;
+@card-radius: 12px;
 
 // global style
 .flex-center {
