--- a/src/App.less
+++ b/src/App.less
@@ -11,6 +11,8 @@
 @input-padding-vertical-base: 8px;
 @input-padding-horizontal: 26px;
 @input-bg: #f5f5f5;
+@select-background: @input-bg;
+@picker-bg: @input-bg;
 @input-border-color: transparent;
 @card-radius: 12px;
 @btn-font-weight: 500;
@@ -18,6 +20,7 @@
 @btn-font-size-lg: 14px;
 @btn-padding-horizontal-lg: 24px;
 @input-height-base: 42px;
+@checkbox-border-radius: 5px;
 
 // global style
 .flex-center {
