--- a/src/App.less
+++ b/src/App.less
@@ -21,6 +21,7 @@
 @btn-padding-horizontal-lg: 24px;
 @input-height-base: 42px;
 @checkbox-border-radius: 5px;
+@form-item-label-font-size: 16px;
 
 // global style
 .flex-center {
@@ -33,4 +34,7 @@
   padding: 3px 16px;
   font-weight: 500;
   border: none;
+}
+.ant-form-item-label > label {
+  font-weight: 500;
 }
